--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Uma pokedex, que tem como função mostrar alguns pokemons.">
-    
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
+    <link rel="stylesheet" href="src/css/listagem.css">
+    <link rel="stylesheet" href="src/css//resposivo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
+
+
     <title>Projeto - POKEDEX</title>
 </head>
+
 <body>
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -44,7 +56,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-grama">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbasaur</h2>
@@ -76,7 +88,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fogo">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -108,7 +120,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-agua">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -140,13 +152,13 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-trevas">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
                             <span>#005</span>
                         </div>
-                        <span class="tipo">Escuridão</span>
+                        <span class="tipo">Trevas</span>
                         <div class="cartao-imagem">
                             <img src="src/imagens/gengar.png" alt="Imagem do Gengar">
                         </div>
@@ -172,13 +184,13 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-dragao">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
                             <span>#006</span>
                         </div>
-                        <span class="tipo">Voador</span>
+                        <span class="tipo">Dragão</span>
                         <div class="cartao-imagem">
                             <img src="src/imagens/dragonite.png" alt="Imagem do Dragonite">
                         </div>
@@ -207,15 +219,34 @@
 
             <nav class="listagem">
                 <ul>
-                    <li><img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu"></li>
-                    <li><img src="src/imagens/cabeca-bulbasaur.png" alt="Cabeça do Bulbasaur"></li>
-                    <li><img src="src/imagens/cabeca-charmander.png" alt="Cabeça do Charmander"></li>
-                    <li><img src="src/imagens/cabeca-gyarados.png" alt="Cabeça do Gyarados"></li>
-                    <li><img src="src/imagens/cabeca-gengar.png" alt="Cabeça do Gengar"></li>
-                    <li><img src="src/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite"></li>
+                    <li class="pokemon ativo">
+                        <img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
+                        <span>Pikachu</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-bulbasaur.png" alt="Cabeça do Bulbasaur">
+                        <span>Bulbasaur</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-charmander.png" alt="Cabeça do Charmander">
+                        <span>Charmander</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-gyarados.png" alt="Cabeça do Gyarados">
+                        <span>Gyarados</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-gengar.png" alt="Cabeça do Gengar">
+                        <span>Gengar</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite">
+                        <span>Dragonite</span>
+                    </li>
                 </ul>
             </nav>
         </div>
     </main>
 </body>
+
 </html>
