--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon aberto tipo-eletrico">
+                <div class="cartao-pokemon aberto tipo-eletrico" id="cartao-pikachu">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-grama">
+                <div class="cartao-pokemon tipo-grama" id="cartao-bulbasaur">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbasaur</h2>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-fogo">
+                <div class="cartao-pokemon tipo-fogo" id="cartao-charmander">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-agua">
+                <div class="cartao-pokemon tipo-agua" id="cartao-gyarados">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-trevas">
+                <div class="cartao-pokemon tipo-trevas" id="cartao-gengar">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
@@ -184,7 +184,7 @@
                     </div>
                 </div>
 
-                <div class="cartao-pokemon tipo-dragao">
+                <div class="cartao-pokemon tipo-dragao" id="cartao-dragonite">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
@@ -219,27 +219,27 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon ativo">
+                    <li class="pokemon ativo" id="pikachu">
                         <img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
                         <span>Pikachu</span>
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="bulbasaur">
                         <img src="src/imagens/cabeca-bulbasaur.png" alt="Cabeça do Bulbasaur">
                         <span>Bulbasaur</span>
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="charmander">
                         <img src="src/imagens/cabeca-charmander.png" alt="Cabeça do Charmander">
                         <span>Charmander</span>
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="gyarados">
                         <img src="src/imagens/cabeca-gyarados.png" alt="Cabeça do Gyarados">
                         <span>Gyarados</span>
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="gengar">
                         <img src="src/imagens/cabeca-gengar.png" alt="Cabeça do Gengar">
                         <span>Gengar</span>
                     </li>
-                    <li class="pokemon">
+                    <li class="pokemon" id="dragonite">
                         <img src="src/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite">
                         <span>Dragonite</span>
                     </li>
@@ -247,6 +247,8 @@
             </nav>
         </div>
     </main>
+
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
