--- a/index.html
+++ b/index.html
@@ -215,6 +215,99 @@
                         </div>
                     </div>
                 </div>
+                <div class="cartao-pokemon tipo-eletrico" id="cartao-electabuzz">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Electabuzz</h2>
+                            <span>#007</span>
+                        </div>
+                        <span class="tipo">Raio</span>
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/electabuzz.png" alt="Imagem do Electabuzz">
+                        </div>
+                    </div>
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 400</li>
+                                <li>Ataque: 500</li>
+                                <li>Defesa: 400</li>
+                                <li>Velocidade: 700</li>
+                                <li>Total: 2000</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+                            <ul>
+                                <li>Onda do Trovão</li>
+                                <li>Raio de Cabeça</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="cartao-pokemon tipo-fogo" id="cartao-cyndaquil">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Cyndaquil</h2>
+                            <span>#008</span>
+                        </div>
+                        <span class="tipo">Fogo</span>
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/cyndaquil.png" alt="Imagem do Cyndaquil">
+                        </div>
+                    </div>
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 400</li>
+                                <li>Defesa: 300</li>
+                                <li>Velocidade: 400</li>
+                                <li>Total: 1400</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+                            <ul>
+                                <li>Carvão Vivo</li>
+                                <li>Martelada</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="cartao-pokemon tipo-trevas" id="cartao-gyarados-sombrio">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Gyarados Sombrio</h2>
+                            <span>#009</span>
+                        </div>
+                        <span class="tipo">Trevas</span>
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/gyarados-sombrio.png" alt="Imagem do Gyarados Sombrio">
+                        </div>
+                    </div>
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 600</li>
+                                <li>Ataque: 1000</li>
+                                <li>Defesa: 700</li>
+                                <li>Velocidade: 500</li>
+                                <li>Total: 2800</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+                            <ul>
+                                <li>Faixa Escura</li>
+                                <li>Presa Afiada</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <nav class="listagem">
@@ -242,6 +335,18 @@
                     <li class="pokemon" id="dragonite">
                         <img src="src/imagens/cabeca-dragonite.png" alt="Cabeça do Dragonite">
                         <span>Dragonite</span>
+                    </li>
+                    <li class="pokemon" id="electabuzz">
+                        <img src="src/imagens/cabeca-electabuzz.png" alt="Cabeça do Electabuzz">
+                        <span>Electabuzz</span>
+                    </li>
+                    <li class="pokemon" id="cyndaquil">
+                        <img src="src/imagens/cabeca-cyndaquil.png" alt="Cabeça do Cyndaquil">
+                        <span>Cyndaquil</span>
+                    </li>
+                    <li class="pokemon" id="gyarados-sombrio">
+                        <img src="src/imagens/cabeca-gyarados-sombrio.png" alt="Cabeça do Gyarados Sombrio">
+                        <span>Gyarados Sombrio</span>
                     </li>
                 </ul>
             </nav>
